Fix screen bug where content overlaps the rounded corners of screen

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ body {
   border: 7px #cf3e48 inset;
   border-radius: 25px;
   background-color: #c0bfc2;
+  padding: 5px;
 }
 
 .cell {
